fixed weatherContainer height as it was too tall

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -34,7 +34,7 @@ header {
   flex-direction: row;
   align-items: end;
   width: 100%;
-  height: 1000px;
+  height: 600px;
   border: solid 10px whitesmoke;
 }
 
@@ -42,7 +42,7 @@ header {
 #inputContainer {
   text-align: center;
   width: 30%;
-  height: 1000px;
+  height: 600px;
   border: 1px solid black;
   background-color: rgb(218, 194, 163);
 }
@@ -88,7 +88,7 @@ button:active {
 #rangeWeather {
   display: inline-block;
   width: 100%;
-  height: 1000px;
+  height: 600px;
   background-color: var(--blueGrotto);
   border: 1px solid black;
   font-size: 40px;
